<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <!--分割线-->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/t2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000"
        android:id="@+id/line"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico4"
        app:layout_constraintBottom_toTopOf="@+id/ico5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000"
        android:id="@+id/line2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginTop="50dp"
        />


    <!-- 职位 -->


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"


        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ret" />

    <ImageView
        android:id="@+id/ico1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/occu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintBottom_toTopOf="@+id/ico2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico1"
        app:layout_constraintRight_toLeftOf="@id/edt1"
        app:layout_constraintTop_toTopOf="@id/ico1"
        app:layout_constraintBottom_toBottomOf="@id/ico1"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_input"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico1"
        app:layout_constraintBottom_toBottomOf="@id/ico1"
        />

    <!-- 年龄 -->
    <ImageView
        android:id="@+id/ico2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/old"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico1"
        app:layout_constraintBottom_toTopOf="@id/ico3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico2"
        app:layout_constraintRight_toLeftOf="@id/edt2"
        app:layout_constraintTop_toTopOf="@id/ico2"
        app:layout_constraintBottom_toBottomOf="@id/ico2"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_input"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico2"
        app:layout_constraintBottom_toBottomOf="@id/ico2"
        />
    <!-- 邮箱 -->



    <ImageView
        android:id="@+id/ico4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico3"
        app:layout_constraintBottom_toTopOf="@id/line"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/ico4"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/ico4"
        app:layout_constraintRight_toLeftOf="@id/edt4"
        app:layout_constraintTop_toTopOf="@id/ico4" />
    <EditText
        android:id="@+id/edt4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_input"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico4"
        app:layout_constraintBottom_toBottomOf="@id/ico4"
        />

    <!-- 年级 -->
    <ImageView
        android:id="@+id/ico3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/doct"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico2"
        app:layout_constraintBottom_toTopOf="@id/ico4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico3"
        app:layout_constraintRight_toLeftOf="@id/edt3"
        app:layout_constraintTop_toTopOf="@id/ico3"
        app:layout_constraintBottom_toBottomOf="@id/ico3"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt3"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_input"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico3"
        app:layout_constraintBottom_toBottomOf="@id/ico3"
         />
    <!-- 博客 -->
    <ImageView
        android:id="@+id/ico5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/blog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintBottom_toTopOf="@id/ico6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blog"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico5"
        app:layout_constraintRight_toLeftOf="@id/edt5"
        app:layout_constraintTop_toTopOf="@id/ico5"
        app:layout_constraintBottom_toBottomOf="@id/ico5"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt5"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_input"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico5"
        app:layout_constraintBottom_toBottomOf="@id/ico5"
         />
    <!-- 岗位 -->
    <ImageView
        android:id="@+id/ico6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/work_exp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico5"
        app:layout_constraintBottom_toTopOf="@id/ico7"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/ico6"
        app:layout_constraintRight_toLeftOf="@id/edt6"
        app:layout_constraintTop_toTopOf="@id/ico6"
        app:layout_constraintBottom_toBottomOf="@id/ico6"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edt6"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/jobHint"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toRightOf="@+id/text6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ico6"
        app:layout_constraintBottom_toBottomOf="@id/ico6"
         />

    <!-- 经历 -->
    <ImageView
        android:id="@+id/ico7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/exp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ico6"
        app:layout_constraintBottom_toTopOf="@id/text7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/text6"
        app:layout_constraintRight_toRightOf="@id/text6"
        app:layout_constraintTop_toTopOf="@id/ico7"
        app:layout_constraintBottom_toBottomOf="@id/ico7"
        app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
        android:id="@+id/edtExp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_input"
        android:gravity="left|top"
        android:background="@drawable/edit_border"
        app:layout_constraintLeft_toLeftOf="@+id/ico7"
        app:layout_constraintRight_toRightOf="@+id/edt1"
        app:layout_constraintTop_toBottomOf="@id/ico7"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
         />




</androidx.constraintlayout.widget.ConstraintLayout>